# opencv_test

Image_Stitching_test/: CMakeLists.txt  opencv_stitch_test.cpp
Image_project/: CMakeLists.txt  image_project.cpp  image_project2.cpp  image_project3.cpp  image_project4.cpp
Image_resize_project/: CMakeLists.txt  image_resize_project.cpp
Image_resize_test/: CMakeLists.txt  opencv_resize_test.cpp
demo/: CMakeLists.txt  Image_Mosaic_Demo.cpp
last_project/: CMakeLists.txt  main.cpp
last_project/image_algorithm/: CMakeLists.txt  image_algorithm.h  image_mosaic_algorithm.cpp
new_project/: CMakeLists.txt  test_main.cpp
new_project/image_algorithm/: image_algorithm.h  image_mosaic_algorithm.cpp
new_project/note/: readme.txt
